fixing spacing by lowering font size

--- a/css/nav.css
+++ b/css/nav.css
@@ -22,7 +22,7 @@
 #navbar .navlink {
 	/* border-right: 0.15em solid #404040; */
 	font-family: 'Quicksand', sans-serif;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	color: black;
 	text-decoration: none;
 	text-align: center;
